# crossfire-server

./: .ctags  .cvsignore  .gitignore  AUTHORS  CHANGES  CREDITS  ChangeLog  DEVELOPERS  DONE  Doxyfile  INSTALL  INSTALL_WIN32.txt  Makefile.am  Makefile.in  README  README.rst  TODO  acinclude.m4  aclocal.m4  autogen.sh  check-fragment.am  configure  configure.ac  configure.in  crossfire32.dsp  crossfire32.dsw  installwin32.bat  run_win32.bat
common/: Makefile.am  Makefile.in  anim.c  arch.c  arch.cpp  artifact.c  bufferreader.c  button.c  cf_random.c  dialog.c  events.cpp  exp.c  friend.c  glue.c  holy.c  image.c  info.c  init.c  is_valid_types_gen.pl  is_valid_types_gen.py  item.c  languages.c  links.c  living.c  loader.l  logger.c  los.c  ltostr.c  map.c  ob_methods.c  ob_types.c  object.c  output_file.c  path.c  player.c  porting.c  quest.c  re-cmp.c  readable.c  recipe.c  (+7 more)
common/assets/: AnimationWriter.cpp  Animations.cpp  ArchetypeLoader.cpp  ArchetypeWriter.cpp  Archetypes.cpp  ArtifactWriter.cpp  AssetCollector.cpp  AssetsManager.cpp  FaceLoader.cpp  FaceWriter.cpp  Faces.cpp  FacesetLoader.cpp  FacesetWriter.cpp  Facesets.cpp  FormulaeWriter.cpp  MessageLoader.cpp  MessageWriter.cpp  Messages.cpp  PngLoader.cpp  QuestLoader.cpp  QuestWriter.cpp  Quests.cpp  TarLoader.cpp  TreasureLoader.cpp  TreasureWriter.cpp  Treasures.cpp  Utils.cpp  assets.cpp
crossedit/: .cvsignore  App.c  App.h  Attr.c  Attr.h  Bitmaps.c  Bitmaps.h  CrEdit.c  CrEdit.h  CrEditP.h  CrFace.c  CrFace.h  CrFaceP.h  CrList.c  CrList.h  CrListP.h  CrUtil.c  CrUtil.h  Crossedit.ad  Crossedit.ad.h  Defines.h  Edit.c  Edit.h  Makefile.am  Makefile.in  MapAttr.c  MapAttr.h  README  Str.c  Str.h  TODO  crossedit.c  png.c  proto.h  stubs.c  xutil.c
crossedit/Cnv/: Cnv.h  CnvBrowse.c  CnvFiles.c  CnvMenu.c  CnvNotify.c  CnvPath.c  CnvPrompt.c  CnvUtil.c  Makefile.am  Makefile.in  README  config.h  excloff.xbm  exclon.xbm  flagoff.xbm  flagon.xbm  prompt.xbm  submenu.xbm  test.c
crossedit/bitmaps/: Makefile.am  Makefile.in  edit.bm  mark.bm  notify.bm
crossedit/doc/: Conventions.doc  Features.doc  Makefile.am  Makefile.in  README  crossedit.man
crossedit/include/: Ansi.h  Makefile.am  Makefile.in  Posix.h  README  X11.h  Xaw.h  debug.h  util.h
devel/: Makefile  Makefile.am  Makefile.in  crossfire-config.c  devel.c
doc/: Crossedit.doc  Makefile.am  Makefile.in  PlayerStats  Protocol  README  README_EXTENSIONS  README_SCRIPT  RandomMaps.doc  RunTimeCommands  Styles.doc  SurvivalGuide  alchemy.doc  arch-handbook.txt  crossedit.man  crossfire-config.man  crossfire-server.man  crossfire.doc  crossfire.man  crosslib.doc  crossloop.man.in  crossloop.man.rst  experience  handbook.ps  include_html.pl  knowledge.txt  map-technical  mapguide  mapmakers_guide_to_runes  mediaTags  metaserver  multigod  plugins  programming_guide  quest  settings  settings.txt  skills.doc  spell-paths  spell_params.doc  (+5 more)
doc/Developers/: Makefile.am  Makefile.in  README  artifact.dox  collect.dox  compound_animations.dox  custom_attributes.dox  cvs  dialog.dox  extmessage-types.html  images  item_transformation  key-value  key-value.dox  login.dox  mainpage.dox  map-technical  map.dox  mapguide  object.dox  objects  plugins  programming_guide  protocol  protocol.txt  python  python.ps  quests  random-maps  random-styles  regions  runes  shops  skills  smooth.tex  sound  spells  teleporters  testplans  treasure_list.dox  (+1 more)
doc/playbook-html/: Makefile.am  Makefile.in  appA.html  appB.html  appC.shtml  bonus-extract  chap1.html  chap2.shtml  chap3.shtml  chap4.shtml  (+11 more)
include/: .cvsignore  AnimationWriter.h  Animations.h  ArchetypeLoader.h  ArchetypeWriter.h  Archetypes.h  ArtifactWriter.h  AssetCollector.h  AssetLoader.h  AssetWriter.h  AssetsCollection.h  AssetsManager.h  AssetsTracker.h  FaceLoader.h  FaceWriter.h  Faces.h  FacesetLoader.h  FacesetWriter.h  Facesets.h  FormulaeWriter.h  Makefile.am  Makefile.in  MessageLoader.h  MessageWriter.h  Messages.h  PngLoader.h  QuestLoader.h  QuestWriter.h  Quests.h  TarLoader.h  TreasureLoader.h  TreasureWriter.h  Treasures.h  Utils.h  WrapperLoader.h  account_char.h  arch.h  artifact.h  assets.h  attack.h  (+62 more)
lib/: .cvsignore  Makefile.am  Makefile.in  README  artifacts  attackmess  ban_file  checkarch  checkarch.pl  checkarch.pl.in  collect  collect.pl  collect.pl.in  crossfire.cfb  crossfire.xbm  crossfire.xpm  dm_file  exp_table  formulae  image_info  materials  messages  metaserver2  motd  news  races  regions  rules  settings  skill_params  smooth  spell_params  stat_bonus  treasures  xbmtobdf.c  xpmtopix.pl  xpmtopix.pl.in
plugin/: Makefile  Makefile.am  Makefile.in  Makefile.old  plugin_python.c
random_maps/: .cvsignore  Makefile.am  Makefile.in  Notes  decor.c  door.c  exit.c  expand2x.c  expand2x.h  floor.c  main.c  maze_gen.c  maze_gen.h  monster.c  random_map.c  random_map.h  reader.l  rogue_layout.c  room_gen.h  room_gen_onion.c  room_gen_spiral.c  rproto.h  snake.c  special.c  square_spiral.c  standalone.c  style.c  test.c  testinput  treasure.c  wall.c
server/: .cvsignore  .~lock.c_misc.c#  Makefile.am  Makefile.in  account.c  account_char.c  alchemy.c  apply.c  artificer.c  attack.c  ban.c  bowery.c  build_map.c  c_chat.c  c_misc.c  c_move.c  c_new.c  c_object.c  c_party.c  c_range.c  c_wiz.c  commands.c  commands.cpp  daemon.c  disease.c  egoitem.c  encounter.c  gods.c  hiscore.c  init.c  input.c  jewler.c  knowledge.c  login.c  main.c  monster.c  move.c  ob_methods.c  ob_types.c  party.c  (+24 more)
types/: ChangeLog  Makefile.am  Makefile.in  README  dummy.c  example.c
utils/: .cvsignore  Makefile.am  Makefile.in  add_throw  add_throw.perl  arch2xml.py  bwp.c  cfarches.xsl  cfdb_convert  cfmeta-rrd  crossfire-loop.c  crossloop  crossloop.in  crossloop.pl  crossloop.pl.in  crossloop.pl.tmpl.in  crossloop.tmpl  crossloop.web.in  flushlocks  generateEmptyCheck.sh  get_release  get_release.in  gridarta-types-convert.c  loreCollect.py  mapper.c  mapper.cpp  maps.c  metaserver  metaserver.pl  metaserver.pl.in  mktable.script  player_dl.pl.in  scores.pl.in  worldmap.html
(+1378 files in other folders)
